--- a/client/src/components/UserPage/userPage.css
+++ b/client/src/components/UserPage/userPage.css
@@ -34,7 +34,7 @@
 
 @media screen and (min-width: 900px) {
   .grid-img-container {
-    padding-left: 25vw;
-    padding-right: 25vw;
+    padding-left: 26vw;
+    padding-right: 26vw;
   }
 }
